# dotcom

./: .gitignore  Cargo.toml  FPM.ftd  README.md  index.ftd  library.ftd  pricing.ftd
FPM/: config.ftd
frontend/: FASTN.ftd  about.ftd  account-setting.ftd  auth.ftd  functions.js  index.ftd  just-user-data.ftd  loader-component.js  pricing.ftd  privacy.ftd  setting.ftd  team.ftd  terms.ftd  utils.ftd
frontend/.fastn/: config.json
frontend/action/: create-account.ftd  login.ftd
frontend/common/: index.ftd
frontend/community/: templates.ftd
frontend/dev/: roadmap.ftd
frontend/guidelines/: index.ftd  lib.ftd  project-guidelines.ftd  (+1 more)
ft2/: Cargo.toml
ft2/src/: check.rs  file.rs  insertable.rs  lib.rs  member_role.rs  site.rs  ud.rs  urls.rs  uuid.rs  validation.rs
ft2/src/errors/: add_domain.rs  common.rs  create_token.rs  delete_domain.rs  delete_token.rs  github.rs  make_primary_domain.rs  mod.rs
ft2/src/route/: error.rs  mod.rs  urls.rs  utils.rs
ft2/src/route/myself/: create_site.rs  mod.rs
ft2/src/route/org/: dashboard.rs  mod.rs
ft2/src/route/public/: dashboard.rs  mod.rs  user_data.rs
ft2/src/route/site/: create_file.rs  delete_file.rs  editor.rs  get_content.rs  info.rs  mod.rs  save_file.rs
ft2/src/route/site/domain/: add_domain.rs  delete_domain.rs  make_primary_domain.rs  mod.rs  recheck_domain.rs
ft2/src/route/site/github/: configure.rs  mod.rs  reconfigure.rs  remove.rs
ft2/src/route/site/setting/: domains.rs  gh_oidc.rs  mod.rs  tokens.rs
ft2/src/route/site/token/: create.rs  delete.rs  mod.rs
scripts/: auto.sh
(+122 files in other folders)
