[workspace]
members = [
     "ft2",
]
resolver = "2"

[profile.release]
lto = true
opt-level = 's'

[workspace.package]
authors = [
    "Amit Upadhyay <upadhyay@gmail.com>",
    "Arpita Jaiswal <arpita@fifthtry.com>",
    "Rithik Seth <rithik@fifthtry.com>",
]
edition = "2021"
description = "ft: FifthTry Backend"
license = "Copyright FifthTry"
repository = "https://github.com/FifthTry/dotcom"
homepage = "https://www.fifthtry.com"


[workspace.dependencies]
ft-sdk = "0.1.1"
ft-sys = "0.1.1"
serde = {  version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"], default-features = false }
http = "1.0"
bytes = "1.0"
ft-common = { path = "../ft/ft-common", features = ["wasm"], default-features = false }
diesel = "2"
regex = "1"
once_cell = "1"
rand = "0.5"
