[package]
name = "ft2"
version = "0.1.0"
edition.workspace = true


[lib]
crate-type = ["cdylib"]

[dependencies]
ft-sdk.workspace = true
ft-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
http.workspace = true
bytes.workspace = true
ft-common.workspace = true
diesel.workspace = true
regex.workspace = true
once_cell.workspace = true
rand.workspace = true

